--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="delete">Удалить</string>
     <string name="save">Сохранить</string>
     <string name="notes">Заметки</string>
-    <string name="about">О приложении</string>
+    <string name="about">О нас</string>
     <string name="settings">Настройки</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -19,4 +19,5 @@
     <string name="user_position">Никнейм</string>
     <string name="application_description">Данное приложение было разработано с трудом.</string>
     <string name="version">Версия</string>
+    <string name="update">Изменить</string>
 </resources>
